--- a/semana1/sistema-loja/index.html
+++ b/semana1/sistema-loja/index.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
-<html>
-<head lang="pt-br">
-    <meta charset="utf-8">
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
     <title>TopBeer - Página Inicial</title>
 </head>
 <body>
+    
+    <header class="cabecalho-principal">
+        <div class="container">
+            <h1>TopBeer</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="controle-estoque.html">Estoque</a></li>
+                    <li><a href="adicionar-produto.html">Produtos</a></li>
+                    <li><a href="funcionários.html">Funcionários</a></li>
+                </ul>
+            </nav>
+        </div>   
+    </header>
 
-    <h1>TopBeer</h1>
-    <p>Essa é a TopBeer, uma loja criada para vender as melhores cervejas</p>
-    <ul>
-        <li><a href="controle-estoque.html">Estoque</a></li>
-        <li><a href="adicionar-produto.html">Produtos</a></li>
-        <li><a href="funcionários.html">Funcionários</a></li>
-    </ul>
-
+    <main class="principal">
+        <div class="container">
+            <img src="img/fundo.jpg" alt="" class="imagem-principal">
+            <p class="descritivo">Essa é a TopBeer, uma loja criada em 2020 para vender as melhores cervejas e 
+                melhor atender aos aficcionados e apreciadores dessa maravilha. Temos os melhores rótulos e opções. 
+                Venham conhecer</p>
+        </div>
+    </main>
+    
+    <footer>
+        <div class="container">
+            <p class="rodape">Todos os direitos reservados ©</p>
+        </div>
+    </footer>
+  
 </body>
 </html>
