--- a/semana1/sistema-loja/adicionar-produto.html
+++ b/semana1/sistema-loja/adicionar-produto.html
@@ -1,23 +1,49 @@
 <!DOCTYPE html>
-<html>
-<head lang="pt-br">
-    <meta charset="utf-8">
-    <title>TopBeer - Produto</title>
+<html lang="pt-br">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/estilo.css">
+	<title>TopBeer - Produto</title>
 </head>
 <body>
-    <form>
-    	<h2>Adicionar produtos</h2>
-    	<label for="foto">Foto</label>
-    	<input type="file" name="foto" id="foto"><br>
-    	<label for="descricao">Descrição</label>
-    	<input type="text" name="descricao" id="descricao"><br>
-    	<label for="preco">Preço - R$</label>
-    	<input type="number" name="preco" id="preco" step=".01"><br>
-    	<label for="qtde">Quantidade</label>
-    	<input type="number" name="quantidade" id="quantidade" min="1"><br>
-    	<input type="submit" name="enviar" value="Enviar">
-    </form>
 
-    <a href="index.html">Home</a>
+	<header class="cabecalho-principal">
+        <div class="container">
+            <h1>TopBeer</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="controle-estoque.html">Estoque</a></li>
+                    <li><a href="adicionar-produto.html">Produtos</a></li>
+                    <li><a href="funcionários.html">Funcionários</a></li>
+                </ul>
+            </nav>
+        </div>   
+	</header>
+	
+	<main>
+		<div class="container">
+			<h2>Adicionar produtos</h2>
+			<form>
+				<label for="foto">Foto</label>
+				<input type="file" name="foto" id="foto" class="form"><br>
+				<label for="descricao">Descrição</label>
+				<input type="text" name="descricao" id="descricao" class="form"><br>
+				<label for="preco">Preço - R$</label>
+				<input type="number" name="preco" id="preco" step=".01" class="form"><br>
+				<label for="qtde">Quantidade</label>
+				<input type="number" name="quantidade" id="quantidade" min="1" class="form"><br>
+				<input type="submit" name="enviar" value="Enviar" class="button">
+			</form>
+		</div>
+	</main>
+    
+    <footer>
+        <div class="container">
+            <p class="rodape">Todos os direitos reservados ©</p>
+        </div>
+    </footer>
+
 </body>
 </html>
